<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Robot Commander</string>
    
    <string name="robot_voice_command_prompt">Say something to your robot!</string>
    <string name="robot_text_command_prompt">or enter the command...</string><string name="robot_button_command_prompt">or click here to display predefined commands...</string>
    
    <string name="speak_button">Speak!</string>
    <string name="voice_recognition_results">Results:</string>
    <string name="textinput_prompt">or type something...</string>
    <string name="predefined_commands">Predefined commands</string>
    <string name="custom_account_hint">e.g. toto@jabber.org</string>
    <string name="custom_account_prompt">...or enter a custom XMPP identifier (Jabber/GTalk...)</string>
    <string name="pr2">Max (PR2)</string>
    <string name="jido">Jido</string>
    <string name="choose_account_prompt">Who do you want to talk to?</string>
    <string name="title_robot_list_preference">Select your robot</string>
    <string name="title_custom_account_preference">...or enter a custom account</string>
    <string name="summary_custom_account_preference">Enter a valid XMPP account (Jabber/GTalk...)</string>
    <string name="summary_robot_list_preference">Select here the robot you want to talk to</string>
    <string name="hello_robot">\&quot;Hello robot!\&quot;</string>
    <string name="forget_it">\&quot;Forget it!\&quot;</string>
    <string name="stop">\&quot;Stop!\&quot;</string>
    <string name="status_not_connected">Not connected</string>
    <string name="status_connected">Connected</string>
    <string name="status_connecting">Connecting...</string>
    <string name="predef_info">Predefined inputs can be configured from the Preferences panel</string>
</resources>

