<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">
    	
    <LinearLayout android:layout_height="wrap_content" 
    	android:id="@+id/linearLayoutStatus" android:layout_width="wrap_content" android:layout_gravity="right" android:baselineAligned="true">
	    <TextView android:id="@+id/text_connection_status" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/status_connecting" android:layout_width="wrap_content" android:layout_gravity="center_vertical"></TextView>
	    <CheckBox android:layout_height="wrap_content" android:id="@+id/cb_connection_status" android:layout_width="wrap_content" android:enabled="false"></CheckBox>
    </LinearLayout>
    	
    <ListView android:layout_weight="1"
     android:layout_width="match_parent" 
     android:id="@+id/transcript" 
     android:layout_height="wrap_content"
     android:stackFromBottom="true"
     android:transcriptMode="alwaysScroll"
                        />
    
     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dip"
        android:text="@string/robot_voice_command_prompt" android:layout_gravity="bottom"/>
        
        <LinearLayout android:layout_height="wrap_content" 
    	android:layout_width="match_parent" 
    	android:id="@+id/linearLayout1" 
    	android:baselineAligned="true">
	    <ImageButton android:id="@+id/btn_speak"
	        android:layout_height="100dip"
	        android:layout_width="100dip"
	        android:layout_gravity="bottom"
	        android:src="@android:drawable/ic_btn_speak_now" android:layout_marginLeft="50dip" android:layout_marginRight="20dip" android:layout_marginTop="20dip" android:layout_marginBottom="20dip"/>
    	
    	<LinearLayout android:id="@+id/linearLayout2" android:layout_height="match_parent" android:orientation="vertical" android:layout_width="match_parent" android:layout_marginRight="10dip">
    	<Button 
    		android:text="@string/hello_robot" 
    		android:id="@+id/btn_hello_robot" 
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content" android:layout_weight="1" android:layout_gravity="right"/>
    	<Button 
    		android:text="@string/forget_it" 
    		android:id="@+id/btn_forget_it" 
    		android:layout_height="wrap_content" 
    		android:layout_width="wrap_content" 
    		android:layout_weight="1" android:layout_gravity="right"/>
    	</LinearLayout>
    </LinearLayout>
    
        
    <ListView android:id="@+id/reco_output"
        android:layout_width="match_parent"
         android:layout_height="wrap_content" android:layout_gravity="bottom"/>
    
    <EditText android:id="@+id/command_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/textinput_prompt" android:layout_gravity="bottom" android:inputType="textNoSuggestions"/>
    
    
    
    <LinearLayout android:layout_height="wrap_content" 
    	android:layout_width="match_parent" 
    	android:id="@+id/linearLayout1" 
    	android:baselineAligned="true">
    <Button android:text="@string/predefined_commands" android:id="@+id/btn_predefined_actions" android:layout_height="match_parent" android:layout_width="wrap_content" android:layout_gravity="right"/>
    <ImageButton android:src="@android:drawable/ic_menu_preferences" android:layout_height="wrap_content" android:id="@+id/btn_settings" android:layout_gravity="right" android:layout_width="wrap_content"></ImageButton>
    </LinearLayout>
 </LinearLayout>
